[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "health-check"
version = "0.1.0"
description = "Robo simples para monitorar sites e alertar por WhatsApp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
twilio = [
    "twilio>=9.0.0",
]

[project.scripts]
health-check = "health_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
